--- a/rancid_tomatillos/src/Movies.css
+++ b/rancid_tomatillos/src/Movies.css
@@ -10,8 +10,32 @@
     grid-gap: 20px
 }
 
+.card{
+    flex:0 0 auto;
+    width: 250px;
+    height: 410px;
+    margin-right: 20px;
+    box-shadow: 0px 0px 10px;
+    border-radius: 5px;
+    overflow: hidden;
+}
 
-.posters {
-    width: 25%;
+.poster {
+    width: 100%;
+    height: 75%;
+    object-fit: cover;
+}
 
+.info {
+    padding: 10px;
+}
+
+.title {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+
+.rating{
+    font-size: 1.1rem;
 }
