feat/displaying-grid

--- a/rancid_tomatillos/src/Movies.css
+++ b/rancid_tomatillos/src/Movies.css
@@ -1,5 +1,7 @@
 .poster-grid {
     display: grid;
+    justify-content: space-between;
+    margin: 10px;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 30px
 }
