--- a/rancid_tomatillos/src/Movies.css
+++ b/rancid_tomatillos/src/Movies.css
@@ -6,7 +6,37 @@
     grid-gap: 30px
 }
 
-.moviePosters {
-    width: 25%;
-
+.movie-cards {
+    width: 100%;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px;
 }
+
+.movie-cards:hover{
+    transform: translateY(-10px);
+  box-shadow: 0px 15px 50px rgba(0, 0, 0, 0.4);
+}
+
+.movie-backdrop {
+    width: 100%;
+    height: 100%;
+    object-fit:fill;
+}
+
+h2 {
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+
+h3 {
+    font-size: 16px;
+    margin-top: 5px;
+}
+
+h2, h3 {
+    color: maroon;
+    font-weight: 500;
+    text-shadow: 0px 2px 10px;
+}
+
