feat/nasty-mango-colors

--- a/rancid_tomatillos/src/Movies.css
+++ b/rancid_tomatillos/src/Movies.css
@@ -1,3 +1,7 @@
+body{
+    background-color: rgb(254, 163, 43);
+}
+
 .poster-grid {
     display: grid;
     justify-content: space-between;
@@ -11,6 +15,7 @@
     margin-bottom: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px;
+    background: linear-gradient(to top, #32936F, rgba(0, 0, 0, 0) 100%);
 }
 
 .movie-cards:hover{
@@ -22,21 +27,38 @@
     width: 100%;
     height: 100%;
     object-fit:fill;
+    border-radius: 7px;
+}
+
+h1 {
+    color: #275105;
+    text-shadow: 0px 3px 10px;
 }
 
 h2 {
+    color: #DF2935;
     font-size: 24px;
     margin-bottom: 5px;
 }
 
 h3 {
-    font-size: 16px;
+    font-size: 20px;
     margin-top: 5px;
+    color: #275105;
+   
 }
 
 h2, h3 {
-    color: maroon;
     font-weight: 500;
     text-shadow: 0px 2px 10px;
+    font-weight:bold;
+}
+
+header{
+    background-color: rgb(238, 120, 17);
+    border: 5px solid #275105;
+    box-shadow: 0 0 5px;
+    font-style: oblique;
+    
 }
 
