--- a/rancid_tomatillos/src/App.css
+++ b/rancid_tomatillos/src/App.css
@@ -4,6 +4,7 @@ padding: 10px 25px;
 text-align: center;
 display: inline-block;
 font-size: 16px;
+font-weight: 700;
 border-radius: 5px;
-transition: all 0.3s ease;
+/* transition: all 0.3s ease; */
 }
