--- a/rancid_tomatillos/src/App.css
+++ b/rancid_tomatillos/src/App.css
@@ -8,3 +8,24 @@ font-weight: 700;
 border-radius: 5px;
 /* transition: all 0.3s ease; */
 }
+.single-movie{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.single-movie img {
+  width: 50%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0px 15px 40px rgba(0, 0, 0, 0.2);
+}
+
+.single-movie button{
+  background-color: #003E1F;
+  color: white;
+  border: solid black 3px;
+  border-radius: 5px;
+  padding: 8px 16px;
+}
